crates/bitnet-prompt-templates/src/snapshots/bitnet_prompt_templates__tests__snapshot_deepseek_multi_turn.snap
---
source: crates/bitnet-prompt-templates/src/lib.rs
assertion_line: 970
expression: result
---
<|im_start|>system
You are friendly.<|im_end|>
<|im_start|>user
Hello<|im_end|>
<|im_start|>assistant
Hi!<|im_end|>
<|im_start|>user
How are you?<|im_end|>
<|im_start|>assistant
