crates/bitnet-prompt-templates/src/snapshots/bitnet_prompt_templates__tests__snapshot_deepseek_single_turn.snap
---
source: crates/bitnet-prompt-templates/src/lib.rs
expression: result
---
<|im_start|>system
You are a helpful assistant.<|im_end|>
<|im_start|>user
What is 2+2?<|im_end|>
<|im_start|>assistant
