crates/bitnet-prompt-templates/src/snapshots/bitnet_prompt_templates__tests__snapshot_deepseek_with_system.snap
---
source: crates/bitnet-prompt-templates/src/lib.rs
expression: result
---
<|im_start|>system
You are a Haskell tutor.<|im_end|>
<|im_start|>user
Explain monads<|im_end|>
<|im_start|>assistant
